# fastmcp-r2r-openapi-integration

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  SUMMARY.md  fastmcp.json  openapi.json  pyproject.toml  requirements.txt  server.py  start.sh
docs/: 01-QUICKSTART.md  02-ARCHITECTURE.md  03-PATTERNS.md  04-FEATURES.md  05-R2R-CLIENT.md  06-DEPLOYMENT.md  07-ROADMAP.md  DEPLOYMENT.md  ENHANCED_FEATURES.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_QUICKSTART.md  PIPELINES.md  QUICKSTART.md  R2R_CLIENT_ANALYSIS.md  R2R_FASTMCP_INTEGRATION.md  README.md  REORGANIZATION_PLAN.md  ROADMAP.md  SUMMARY.md  fastapi-docs.md  fastmcp-code-docs.md  fastmcp-code-github.md
docs/docs-r2r/: 01_introduction.md  02_lifecycle.md  03_configuration.md  04_data_ingestion.md  05_contextual_enrichment.md  06_ai_search.md  07_rag.md  08_knowledge_graphs.md  09_graphrag.md  10_agent.md  11_orchestration.md  12_maintenance.md
docs/fastmcp/: 09-layered-architecture.md  README.md
docs/r2r-split/: README.md  accessing-r2r-and-hatchet-dashboard.md  agent.md  ai-powered-search.md  authentication.md  building-and-running-the-deployment.md  chunks.md  collections-1.md  collections.md  common-use-cases.md  communities.md  conclusion-1.md  conclusion.md  configuration.md  configuring-nginx-as-a-reverse-proxy.md  configuring-r2r.md  contextual-enrichment.md  conversations-1.md  conversations.md  data-ingestion.md  documents.md  (+37 more)
scripts/: README.md  batch_ingest.py  search_cli.py
src/: __init__.py  pipelines.py  r2r_typed.py  server.py
